# sql-tui

./: .gitignore  Cargo.toml  LICENSE  README.md
docker/: docker-compose.yaml  init-standby.sh  primary.conf  primary_pg_hba.conf  schema.sql  standby.Dockerfile
src/: lib.rs  main.rs
src/lib/: command.rs  db.rs  editor.rs  highlight.rs  list.rs  log.rs  mod.rs  pgtype.rs  results.rs  styles.rs  tables.rs  tabs.rs
src/v2/: mod.rs
