[package]
name = "sql-tui"
version = "0.1.0"
description = "A tui for interacting with postgresql"
authors = ["jmarren <jmarren99@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio" ] }
sqlx-postgres = { version = "0.8.6", features = [ "chrono" ] }
ratatui-textarea = "0.9.0"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
